cloudformation/aws-laboratorios/templates/lab.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  Módulo de un laboratorio Endpoint Central: subred aislada, SG intra-lab,
  ec-server (.10), ec-client1 (.11), ec-client2 (.12) con IP pública.

Parameters:
  LabName:
    Type: String
    Description: Nombre o id del laboratorio (etiquetas, prefijos)

  LabIndex:
    Type: Number
    Description: Octeto de subred → 10.0.<LabIndex>.0/24
    MinValue: 1
    MaxValue: 254

  VpcId:
    Type: AWS::EC2::VPC::Id

  VpcCidr:
    Type: String
    Default: 10.0.0.0/16

  InternetGatewayId:
    Type: String

  AmiServer:
    Type: AWS::EC2::Image::Id

  AmiClient:
    Type: AWS::EC2::Image::Id

  InstanceTypeServer:
    Type: String
    Default: t3.large

  InstanceTypeClient:
    Type: String
    Default: t3.medium

  RootVolumeServerGb:
    Type: Number
    Default: 80

  RootVolumeClientGb:
    Type: Number
    Default: 60

  KeyName:
    Type: AWS::EC2::KeyPair::KeyName

  ProjectTag:
    Type: String
    Default: endpoint-central

  EnvTag:
    Type: String
    Default: lab

Resources:
  LabSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VpcId
      CidrBlock: !Sub "10.0.${LabIndex}.0/24"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${LabName}-subnet"
        - Key: Lab
          Value: !Ref LabName
        - Key: Role
          Value: endpoint-central-lab
        - Key: Project
          Value: !Ref ProjectTag
        - Key: Env
          Value: !Ref EnvTag

  LabRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub "${LabName}-rt"
        - Key: Lab
          Value: !Ref LabName
        - Key: Project
          Value: !Ref ProjectTag
        - Key: Env
          Value: !Ref EnvTag

  LabDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: LabRouteTable
    Properties:
      RouteTableId: !Ref LabRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayId

  LabRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref LabSubnet
      RouteTableId: !Ref LabRouteTable

  LabNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub "${LabName}-nacl"
        - Key: Lab
          Value: !Ref LabName
        - Key: Project
          Value: !Ref ProjectTag
        - Key: Env
          Value: !Ref EnvTag

  LabSubnetNetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref LabSubnet
      NetworkAclId: !Ref LabNetworkAcl

  # --- NACL: tráfico interno del lab ---
  NaclIngressSubnet:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref LabNetworkAcl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: !Sub "10.0.${LabIndex}.0/24"

  NaclEgressSubnet:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref LabNetworkAcl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: !Sub "10.0.${LabIndex}.0/24"

  NaclIngressRdp:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref LabNetworkAcl
      RuleNumber: 110
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 3389
        To: 3389

  NaclIngressEcConsole:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref LabNetworkAcl
      RuleNumber: 111
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 8020
        To: 8020

  NaclIngressEcAgent:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref LabNetworkAcl
      RuleNumber: 112
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 8383
        To: 8383

  NaclIngressEcNotification:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref LabNetworkAcl
      RuleNumber: 113
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 8027
        To: 8027

  NaclIngressEcRemoteControlSslTcp:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref LabNetworkAcl
      RuleNumber: 114
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 8443
        To: 8443

  NaclIngressEcRemoteControlSslUdp:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref LabNetworkAcl
      RuleNumber: 115
      Protocol: 17
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 8443
        To: 8443

  NaclIngressEcRemoteControl:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref LabNetworkAcl
      RuleNumber: 116
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 8444
        To: 8444

  # Denegar otras subredes de la VPC (otros labs)
  NaclIngressDenyVpc:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref LabNetworkAcl
      RuleNumber: 900
      Protocol: -1
      RuleAction: deny
      Egress: false
      CidrBlock: !Ref VpcCidr

  NaclEgressDenyVpc:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref LabNetworkAcl
      RuleNumber: 900
      Protocol: -1
      RuleAction: deny
      Egress: true
      CidrBlock: !Ref VpcCidr

  NaclEgressInternet:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref LabNetworkAcl
      RuleNumber: 200
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0

  LabSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub "Lab ${LabName}: tráfico libre intra-lab + EC/RDP público"
      GroupName: !Sub "${LabName}-sg"
      VpcId: !Ref VpcId
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
          Description: Salida libre
      Tags:
        - Key: Name
          Value: !Sub "${LabName}-sg"
        - Key: Lab
          Value: !Ref LabName
        - Key: Project
          Value: !Ref ProjectTag
        - Key: Env
          Value: !Ref EnvTag

  LabSecurityGroupSelfIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref LabSecurityGroup
      IpProtocol: -1
      SourceSecurityGroupId: !Ref LabSecurityGroup
      Description: Todo entre instancias del mismo lab

  LabSecurityGroupRdpIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref LabSecurityGroup
      IpProtocol: tcp
      FromPort: 3389
      ToPort: 3389
      CidrIp: 0.0.0.0/0
      Description: RDP desde cualquier origen

  LabSecurityGroupEc8020Ingress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref LabSecurityGroup
      IpProtocol: tcp
      FromPort: 8020
      ToPort: 8020
      CidrIp: 0.0.0.0/0
      Description: Endpoint Central HTTP

  LabSecurityGroupEc8383Ingress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref LabSecurityGroup
      IpProtocol: tcp
      FromPort: 8383
      ToPort: 8383
      CidrIp: 0.0.0.0/0
      Description: Endpoint Central HTTPS

  LabSecurityGroupEc8027Ingress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref LabSecurityGroup
      IpProtocol: tcp
      FromPort: 8027
      ToPort: 8027
      CidrIp: 0.0.0.0/0
      Description: Endpoint Central notification server

  LabSecurityGroupEc8443TcpIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref LabSecurityGroup
      IpProtocol: tcp
      FromPort: 8443
      ToPort: 8443
      CidrIp: 0.0.0.0/0
      Description: Endpoint Central remote control SSL

  LabSecurityGroupEc8443UdpIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref LabSecurityGroup
      IpProtocol: udp
      FromPort: 8443
      ToPort: 8443
      CidrIp: 0.0.0.0/0
      Description: Endpoint Central remote control SSL UDP

  LabSecurityGroupEc8444Ingress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref LabSecurityGroup
      IpProtocol: tcp
      FromPort: 8444
      ToPort: 8444
      CidrIp: 0.0.0.0/0
      Description: Endpoint Central remote control Tools

  EcServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AmiServer
      InstanceType: !Ref InstanceTypeServer
      KeyName: !Ref KeyName
      SubnetId: !Ref LabSubnet
      SecurityGroupIds:
        - !Ref LabSecurityGroup
      PrivateIpAddress: !Sub "10.0.${LabIndex}.10"
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: !Ref RootVolumeServerGb
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: !Sub "${LabName}-ec-server"
        - Key: Lab
          Value: !Ref LabName
        - Key: Role
          Value: endpoint-central-lab
        - Key: Project
          Value: !Ref ProjectTag
        - Key: Env
          Value: !Ref EnvTag

  EcClient1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AmiClient
      InstanceType: !Ref InstanceTypeClient
      KeyName: !Ref KeyName
      SubnetId: !Ref LabSubnet
      SecurityGroupIds:
        - !Ref LabSecurityGroup
      PrivateIpAddress: !Sub "10.0.${LabIndex}.11"
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: !Ref RootVolumeClientGb
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: !Sub "${LabName}-ec-client1"
        - Key: Lab
          Value: !Ref LabName
        - Key: Role
          Value: endpoint-central-lab
        - Key: Project
          Value: !Ref ProjectTag
        - Key: Env
          Value: !Ref EnvTag

  EcClient2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AmiClient
      InstanceType: !Ref InstanceTypeClient
      KeyName: !Ref KeyName
      SubnetId: !Ref LabSubnet
      SecurityGroupIds:
        - !Ref LabSecurityGroup
      PrivateIpAddress: !Sub "10.0.${LabIndex}.12"
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: !Ref RootVolumeClientGb
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: !Sub "${LabName}-ec-client2"
        - Key: Lab
          Value: !Ref LabName
        - Key: Role
          Value: endpoint-central-lab
        - Key: Project
          Value: !Ref ProjectTag
        - Key: Env
          Value: !Ref EnvTag

Outputs:
  LabName:
    Value: !Ref LabName

  SubnetId:
    Value: !Ref LabSubnet

  SubnetCidr:
    Value: !Sub "10.0.${LabIndex}.0/24"

  SecurityGroupId:
    Value: !Ref LabSecurityGroup

  EcServerId:
    Value: !Ref EcServer

  EcServerPrivateIp:
    Value: !GetAtt EcServer.PrivateIp

  EcServerPublicIp:
    Value: !GetAtt EcServer.PublicIp

  EcClient1Id:
    Value: !Ref EcClient1

  EcClient1PrivateIp:
    Value: !GetAtt EcClient1.PrivateIp

  EcClient1PublicIp:
    Value: !GetAtt EcClient1.PublicIp

  EcClient2Id:
    Value: !Ref EcClient2

  EcClient2PrivateIp:
    Value: !GetAtt EcClient2.PrivateIp

  EcClient2PublicIp:
    Value: !GetAtt EcClient2.PublicIp

  EcConsoleUrl:
    Value: !Sub
      - "http://${ServerIp}:8020"
      - ServerIp: !GetAtt EcServer.PublicIp
